samples/_failures_safe/1761444844_896824_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ccb4510.c: In function ‘main’:
./samples/SAFE/__tmp_7ccb4510.c:144:9: error: expected expression at end of input
  144 |         if (is_valid_level(choice))
      |         ^~
./samples/SAFE/__tmp_7ccb4510.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ccb4510.c:144:9: error: expected declaration or statement at end of input
